Propagate on selected keyframes #44997

Closed
opened 2015-06-08 16:17:56 +02:00 by Tal Hershkovich · 9 comments

System Information
Debian 64-bit

Blender Version
2.75 test build)

Short description of error
Sorry for reposting the bug but I didnt had time to prepare a sample file for the bug report until now

Exact steps for others to reproduce the error
reProduce similiar steps to my demo from the multikey script
https://www.youtube.com/watch?v=XuUIxVvWz_E
Using the file propagate.rar

  • Select the head control of the femal rig
  • Select keyframes from 65 to 190
  • go to frame 145
  • rotate the head to look more straight for example: 30deg on the Z axis and -15deg on the Yaxis (without rotating the X)
  • use the propagate tool with "on selected keyframes only"

Instead of just adding to the values the function just flattens the curves (everything gets the same value including the X axis rotation).
the keyframes that come before the timeline indicator are being ignored. so right now the head is just rotating from frames 141 to 145

Hope it helps

*This is a file from my work for a client, so please use it only for bug testing

**System Information** Debian 64-bit **Blender Version** 2.75 test build) **Short description of error** Sorry for reposting the bug but I didnt had time to prepare a sample file for the bug report until now **Exact steps for others to reproduce the error** reProduce similiar steps to my demo from the multikey script https://www.youtube.com/watch?v=XuUIxVvWz_E Using the file [propagate.rar](https://archive.blender.org/developer/F187517/propagate.rar) - Select the head control of the femal rig - Select keyframes from 65 to 190 - go to frame 145 - rotate the head to look more straight for example: 30deg on the Z axis and -15deg on the Yaxis (without rotating the X) - use the propagate tool with "on selected keyframes only" Instead of just adding to the values the function just flattens the curves (everything gets the same value including the X axis rotation). the keyframes that come before the timeline indicator are being ignored. so right now the head is just rotating from frames 141 to 145 Hope it helps *This is a file from my work for a client, so please use it only for bug testing

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Tal Hershkovich 2015-06-08 16:17:56 +02:00

Added subscriber: @TalHershkovich

Added subscriber: @TalHershkovich

Forgot to mention that the same steps are in the video from 0:27 to 0:40

Forgot to mention that the same steps are in the video from 0:27 to 0:40

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

What is the propagate tool? Is it an add-on?

What is the propagate tool? Is it an add-on?

This issue was referenced by 5ca3f3d811

This issue was referenced by 5ca3f3d81169911836820d2ecd857fbc66be7c84
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by f751e7dc77

This issue was referenced by f751e7dc77dd5cd69b2dd8073838d8472dc8070a

just reminding that the propogate tool is still not working.
it works now only on selected keyframes. but everything still gets the same value.

just reminding that the propogate tool is still not working. it works now only on selected keyframes. but everything still gets the same value.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44997
No description provided.