Partial Fix T44997: Propagate pose on selected keyframes only included those after the current frame

This behaviour was confusing, since "selected keyframes" suggests that it covers
all selected keyframes (instead of trying to do this based on frame ranges).